# pistonen

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  build.py  conanfile.txt
scripts/: build.sh  resgen.py
src/: CMakeLists.txt  buffer.cpp  buffer.h  custom_serve.h  format.cpp  format.h  jutil.h  lmacro_begin.h  lmacro_end.h  log.cpp  log.h  message.cpp  message.h  options.h  pistonen.h  ptf.cpp  serve.cpp  server.cpp  server.h  string.h  test.cpp  vocabserv.cpp  vocabserv.h
src/detail/: server.h
src/ptf/: ptf.cpp  ptf.h  table.h  writer.cpp
src/ptf/detail/: type.h  writer.h
src/res/: index.ptf
src/www/: index.js
